--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -4,10 +4,11 @@ user.register.password_not_match=Password does not match
 
 user.login.successfully=Login successfully
 user.login.failed=Login failed
-user.login.wrong_username_password=Wrong phone number or password
+user.login.wrong_username_password=Wrong username or password
 user.login.role_not_exist=Role does not exist
 user.login.user_is_locked=User is locked
 
+user.username.not_empty=Username not empty
 user.password.not_empty=Password not empty
 
 error.forbidden=You are not authorized to access this resource.
