--- a/src/main/resources/i18n/messages_vi_VN.properties
+++ b/src/main/resources/i18n/messages_vi_VN.properties
@@ -12,8 +12,8 @@ user.username.not_empty=Tên tài khoản không được để trống
 user.username.existing=Tên tài khoản đã tồn tại
 user.password.not_empty=Mật khẩu không được để trống
 
-error.forbidden=Bạn không được quyền truy cập tài nguyên này.
-
+message.no_content=Không có nội dung
+message.error.forbidden=Bạn không được quyền truy cập tài nguyên này.
 
 auth.verify_token.successfully=Xác minh token thành công
 auth.verify_token.failed=Lỗi xác minh Token
