#151 - update api create user

--- a/src/main/resources/i18n/messages_vi_VN.properties
+++ b/src/main/resources/i18n/messages_vi_VN.properties
@@ -1,6 +1,7 @@
 user.register.successfully=Đăng ký tài khoản thành công
 user.register.failed=Lỗi đăng ký tài khoản
 user.register.password_not_match=Mật khẩu không chính xác
+user.register.username.existing=Tài khoản đã tồn tại
 
 user.login.successfully=Đăng nhập thành công
 user.login.failed=Lỗi đăng nhập
